Make button more semantic/accessible

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,8 @@
         </div>
         <div id="timer-wrapper">
             <div id="timer-circle">
-                start
+                <button id="start-btn">start</button>
             </div>
-            <!-- <button id="start-btn">Start</button> -->
         </div>
     </main>
     <footer>
