--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         </div>
     </main>
     <footer>
-        <p><a href="/about.html">about & credits</a></p>
+        <p><a href="about.html">about & credits</a></p>
         <p>by caesiumtea.</p>
     </footer>
     <script src="app.js" defer></script>
